--- a/department-service.properties
+++ b/department-service.properties
@@ -3,7 +3,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/department_db
 spring.datasource.username = root
 spring.datasource.password = mysqlsxs
 
-spring.boot.message = ~Department Service~
+spring.boot.message = Department Service
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto = update
 
