--- a/employee-service.properties
+++ b/employee-service.properties
@@ -10,4 +10,4 @@ server.port =8081
 
 eureka.instance.client.serverUrl.defaultZone =http://localhost:8761/eureka/
 
-spring.boot.message = Emloyee Service
+spring.boot.message = Emloyee Service Spring Cloud Bus Demo
